# gxx

./: .gitignore  CMakeLists.txt  README.md  asmlst  gxx.g.py  gxx.gll  lazerproxy.h  make.py
HIDE/std/: memory  string
doxygen/: config  log
doxygen/html/: HIDE_2algorithm_8h_source.html  HIDE_2arglist_8h_source.html  HIDE_2io_2iostream_8h_source.html  HIDE_2io_2reader_8h_source.html  HIDE_2io_2stdstream_8h_source.html  HIDE_2io_2unix_2directory_8h_source.html  HIDE_2io_2unix_2file_8h_source.html  HIDE_2io_2writer_8h_source.html  HIDE_2ionew_2fdfile_8h_source.html  HIDE_2ionew_2format__writer_8h_source.html  HIDE_2ionew_2strm_8h_source.html  HIDE_2iterator__base__funcs_8h_source.html  HIDE_2iterator__base__types_8h_source.html  HIDE_2newio_2fdfile_8h_source.html  HIDE_2newio_2format__writer_8h_source.html  HIDE_2newio_2strm_8h_source.html  HIDE_2string_8h_source.html  (+4496 more)
gxx/: TODO  algorithm.h  arglist.cpp  arglist.h  arglist2.h  argname.h  array.h  buffer.cpp  buffer.h  bytearray.h  bytering.h  chain.h  checker.h  concept.h  container.h  creader.h  debug.h  delegate.h  dlist.h  exception.h  format.cpp  format.h  gen.h  generator.h  hashtable.h  history.h  iteratible.h  json.h  line.h  logger.h  memory_writer.h  memzone.h  objbuf.h  object_buffer.h  panic.h  pool.h  print.cpp  print.h  referenced.h  result.h  (+16 more)
libc/: libc.g.py
posix/: posix.g.py
src/: format.cpp  string.cpp
std/: algorithm  functional  memory  move.h  new  std.g.py  string  type_traits  utility
utests/: base64.cpp  event.cpp  hexascii.cpp  interval.cpp  make.py  print.cpp  runtests
(+2532 files in other folders)
